<resources>
    <string name="app_name">Popular Movies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>
    <string name="exit">Do you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="desc1">Popular Movies suggestion app developed as part of the Udacity Android Developer Nanodegree programme</string>
    <string name="desc2">Developed by Samriddha Basu</string>
    <string name="desc3">Powered by The Movie Database</string>
    <string name="desc4">Icon credits: Moonshine Icon Pack by Pedro Peguero Jr. (under Creative Commons 4.0 License)</string>
    <string name="search_hint">Search</string>
    <string name="credits">More</string>
    <string name="intro">Replay Intro</string>
    <string name="site">Website</string>
    <string name="git">GitHub</string>
    <string name="gplus">Google+</string>

    <string name="pop">Most Popular</string>
    <string name="high">Top Rated</string>
    <string name="fav">Favorites</string>
    <string name="up">Upcoming</string>
    <string name="now">Playing now</string>

    <string name="details">Details</string>
    <string name="sorting">Sorting</string>
    <string name="thats_all">That\'s all!</string>
    <string name="intro1">This app suggests movies for you to watch</string>
    <string name="intro2">Use the navigation drawer to select sorting criteria</string>
    <string name="intro3">Tap a movie poster on the grid view to open detailed view including synopsis, ratings, reviews and trailers</string>
    <string name="intro4">In the details view, tap a movie poster or backdrop to view full screen</string>
    <string name="intro5">Tap the Floating Action Button to add to Favorites. Favorites are stored offline!</string>
    <string name="intro_last">You can play this intro again from the About page</string>

    <string name="head_general">Miscellaneous settings</string>
    <string name="anim_setting">Enable animations</string>
    <string name="anim_def">Disabling this might improve performance</string>
    <string name="head_thumb">Thumbnail options</string>
    <string name="res_thumb">Thumbnail quality:</string>
    <string name="head_detail">Details view options</string>
    <string name="res_bg">Backdrop resolution:</string>
    <string name="res_def">Default is medium</string>
    <string name="low_res">Low</string>
    <string name="med_res">Medium</string>
    <string name="hi_res">High</string>
    <string name="max_res">Maximum</string>
    <string name="bg_toggle">Enable backdrop</string>
    <string name="def_bgtoggle">Show backdrop in details view</string>
    <string name="palette_toggle">Enable dynamic coloring</string>
    <string name="def_palettetoggle">Automagically extracts and applies colors from the poster to the details screen</string>
    <string name="history">Clear search history</string>
    <string name="def_history">This action cannot be undone</string>
    <string name="history_confirm">Are you sure you wish to delete your search history?</string>
    <string name="sdk_low">Requires Android 5.0+</string>

    <string name="synopsis">Synopsis</string>
    <string name="release">Release date</string>
    <string name="rating">Rating</string>
    <string name="trailer">Trailers</string>
    <string name="review">Reviews</string>

    <string name="no_network">No network connection :(</string>
    <string name="network">Unable to fetch content from server. Check your network status</string>
    <string name="refresh_error">Failed to  refresh content from server. Check your network status</string>
    <string name="no_results">No results returned</string>
    <string name="invalid_url">No movie found at given URL</string>
    <string name="browser">Open in Browser</string>
    <string name="no_fav">No favorites to show</string>
    <string name="no_fav_text">No favorites yet\nAdd favorites by tapping the FAB when viewing a movie\'s details</string>
    <string name="content">Failed to retrieve all content. Data does not exist in database or connection lost</string>
    <string name="conn">Connection restored</string>
    <string name="no_conn">Connection lost</string>
    <string name="loading">Loading…</string>
    <string name="processing">Processing…</string>
    <string name="no_png">Could not obtain PNG, sharing link instead</string>
    <string name="added">Added to Favorites</string>
    <string name="removed">Removed from Favorites</string>

    <string name="no_trailers">No trailers found :(</string>
    <string name="no_reviews">No reviews found :(</string>
    <string name="author">Review by: \ </string>
    <string name="unknown">Unknown</string>

    <string name="fav_error">Error fetching favorites</string>
    <string name="no_login">TMDb sign-in coming in the next major update :D</string>

    <string name="blank_fragment">Tap a movie on the grid to view its details here</string>


    <string name="nav_sec">Tap here to learn more</string>
    <string name="sign_in_nav">Sign into TMDb</string>
    <string name="sign_out_nav">Tap here to sign out</string>
    <string name="signed_in">Signed in as \ </string>
    <string name="user_blank">Not signed in</string>
    <string name="uid">ID: \ </string>
    <string name="acc_desc">Sign in to your themoviedb.org account to get the optimum experience.\n- Rate movies\n- Review movies\n- Sync your Favorites list\n\nBETA: None of these features implemented yet.\n\nPress \'Sign In\' button to be taken to the TMDb account page where you can sign up for an account or sign into an existing one.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="acc_more">Learn more</string>
    <string name="acc_hide_more">Hide info</string>
    <string name="unauth">Account access not granted</string>

</resources>
