<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/sort_group">
            <item
                android:id="@+id/nav_pop"
                android:icon="@drawable/ic_whatshot_white_24px"
                android:title="@string/pop" />
            <item
                android:id="@+id/nav_high"
                android:icon="@drawable/ic_grade_white_24px"
                android:title="@string/high" />
            <item
                android:id="@+id/nav_up"
                android:icon="@drawable/ic_new_releases_white_24px"
                android:title="@string/up" />
            <item
                android:id="@+id/nav_now"
                android:icon="@drawable/ic_local_play_white_24px"
                android:title="@string/now" />
            <item
                android:id="@+id/nav_fav"
                android:icon="@drawable/ic_favorite_white_24px"
                android:title="@string/fav" />
    </group>

    <group android:id="@+id/settings_group">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_24px"
            android:title="@string/action_about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24px"
            android:title="@string/action_settings" />
    </group>

</menu>
