<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:paddingBottom="@dimen/horizontal_margin_half">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/aboutIcon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/aboutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutIcon"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/paddingLarge"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutName"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/horizontal_margin_half"
        android:layout_marginRight="@dimen/horizontal_margin_half"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardElevation="@dimen/elevation">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/desc1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            <Button
                android:id="@+id/introBtn"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/desc1"
                android:layout_alignStart="@id/desc1"
                android:layout_below="@id/desc1"
                android:layout_marginBottom="8dp"
                android:onClick="intro"
                android:text="@string/intro" />
            <Button
                android:id="@+id/credits"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/desc1"
                android:layout_alignRight="@id/desc1"
                android:layout_below="@id/desc1"
                android:layout_marginBottom="8dp"
                android:onClick="credits"
                android:text="@string/credits" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/horizontal_padding"
        android:layout_marginLeft="@dimen/horizontal_margin_half"
        android:layout_marginRight="@dimen/horizontal_margin_half"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardElevation="@dimen/elevation">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/desc2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            <Button
                android:id="@+id/site"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/desc2"
                android:layout_alignStart="@id/desc2"
                android:layout_below="@id/desc2"
                android:layout_marginBottom="8dp"
                android:onClick="click"
                android:text="@string/site" />
            <Button
                android:id="@+id/git"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/desc2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:onClick="click"
                android:text="@string/git" />
            <Button
                android:id="@+id/gplus"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/desc2"
                android:layout_alignRight="@id/desc2"
                android:layout_below="@id/desc2"
                android:layout_marginBottom="8dp"
                android:onClick="click"
                android:text="@string/gplus" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>