<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Details"
    tools:showIn="@layout/detail">

    <ScrollView
        android:id="@+id/detail_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">
        <LinearLayout
            android:id="@+id/detail_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/horizontal_margin_half">
            <android.support.v7.widget.CardView
                android:id="@+id/detail_card"
                style="@style/Cards"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:contentPadding="16dp" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="@dimen/poster_w"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="onPosterClick"
                    android:src="@drawable/ic_photo_white_24px"
                    android:transitionName="poster" />
                    <TextView
                        android:id="@+id/rate_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/horizontal_margin_half"
                        android:layout_marginTop="@dimen/paddingLarge"
                        android:text="@string/rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/ten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/rate_text"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="/10" />

                    <TextView
                        android:id="@+id/mvote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/ten"
                        android:layout_below="@id/rate_text"
                        android:layout_marginRight="@dimen/horizontal_padding"
                        android:layout_marginTop="@dimen/vertical_margin_half"
                        android:layout_toLeftOf="@id/ten"
                        android:text="0.0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                    <TextView
                        android:id="@+id/rel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/mvote"
                        android:layout_marginEnd="@dimen/horizontal_margin_half"
                        android:layout_marginRight="@dimen/horizontal_margin_half"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/release"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/mdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/rel_text"
                        android:layout_marginEnd="@dimen/horizontal_padding"
                        android:layout_marginRight="@dimen/horizontal_padding"
                        android:layout_marginTop="@dimen/vertical_margin_half"
                        android:text="01-01-1970"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_large" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@id/detail_card"
                style="@style/Cards"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:contentPadding="16dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/synopsis"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/mplot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/detail_card_trailer"
                style="@style/Cards"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:contentPadding="16dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/trailer"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/no_tr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_trailers"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:visibility="gone"/>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/tr_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:scrollbars="horizontal"
                        android:visibility="gone"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/detail_card_review"
                style="@style/Cards"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:contentPadding="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/review"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/expandText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingBottom="@dimen/horizontal_margin_half"
                        android:paddingLeft="@dimen/horizontal_margin_half"
                        android:paddingRight="@dimen/horizontal_margin_half"
                        android:text="@string/expandReview" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.NestedScrollView>